--- a/setka.html
+++ b/setka.html
@@ -23,10 +23,10 @@
 
 
         RESPONSYWNOŚĆ BEZ FLOAT:LEFT -ów !!!!!!!!!!!!!!!!!!!!!!!!!!!
+        NA FLEXIE
 
         TODO:
         leaderboard, logowanie, faktyczny restart strony a nie zwykłe przeładowanie
-        oswald font dać
     
 
         @font-face {font-family: 'nazwa'; src: url(link)}
